# nfs-top

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  nfs-top.requirements
.claude/agents/: code-reviewer.md  perf-optimizer.md  perf-reviewer.md  security-auditor.md
.github/workflows/: release.yml
examples/: bpf_smoke.rs
src/: app.rs  event.rs  lib.rs  main.rs  tui.rs
src/bpf/: nfs_lat.bpf.c  nfs_lat.bpf.h
src/model/: derive.rs  mod.rs  types.rs
src/sampler/: dns.rs  ebpf.rs  hist.rs  mod.rs  mounts.rs  mountstats.rs  rpc.rs  sockets.rs
src/ui/: help.rs  hist.rs  latency.rs  mod.rs  overview.rs  raw.rs  rpc_mix.rs  servers.rs  transport.rs
src/util/: format.rs  mod.rs  parse.rs  ringbuf.rs
tests/: parsers.rs
tests/fixtures/: mountstats_v41.txt  proc_net_tcp.txt  proc_net_tcp6.txt
