[package]
name = "nfs-top"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Ratatui-inspired Linux NFS client monitor for /proc/* data sources"
repository = "https://github.com/blakegolliher/nfs-top"
readme = "README.md"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]
termion = ["dep:termion", "ratatui/termion"]
termwiz = ["dep:termwiz", "ratatui/termwiz"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.29", default-features = false }

crossterm = { version = "0.28", optional = true }
termion = { version = "3", optional = true }
termwiz = { version = "0.23", optional = true }
